--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffeaa7;
+  background-color: #0cd2e4ea;
   min-height: 70vh;
   padding: 1rem;
   box-sizing: border-box;
@@ -31,12 +31,13 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
+  color: #00000097;
 }
 .heading h1 {
   transform: rotate(2deg);
   padding: 0.2rem 1.2rem;
   border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
-  background-color: #fdcb6e;
+  background-color: #00eaffea;
   font-size: 1.5rem;
 }
 
@@ -47,7 +48,7 @@ body {
   border-bottom-right-radius: 15px 3px;
   border-bottom-left-radius: 3px 15px;
   border: solid 3px transparent;
-  border-bottom: dashed 3px #fdcb6e;
+  border-bottom: dashed 3px #7c02ff97;
   font-family: "Architects Daughter", cursive;
   font-size: 1rem;
   color: hsla(260, 2%, 25%, 0.7);
@@ -62,7 +63,7 @@ button {
   text-decoration: none;
   padding-bottom: 3px;
   border-radius: 5px;
-  background-color: #ffeaa7;
+  background-color: #7c02ff97;
 }
 button span {
   background: #f1f5f8;
