--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
   border-bottom: dashed 3px #7c02ff97;
   font-family: "Architects Daughter", cursive;
   font-size: 1rem;
-  color: hsla(260, 2%, 25%, 0.7);
+  color: #000;
   width: 70%;
   margin-bottom: 20px;
 }
